@@ -71,6 +71,7 @@ import mobac.program.atlascreators.TrekBuddy;
 import mobac.program.atlascreators.TrekBuddyTared;
 import mobac.program.atlascreators.TwoNavRMAP;
 import mobac.program.atlascreators.Ublox;
+import mobac.program.atlascreators.Viewranger;
 import mobac.program.jaxb.AtlasOutputFormatAdapter;
 
 @XmlRootElement
@@ -127,6 +128,7 @@ public class AtlasOutputFormat implements Comparable<AtlasOutputFormat> {
 		FORMATS.add(createByClass(TrekBuddy.class));
 		FORMATS.add(createByClass(TwoNavRMAP.class));
 		FORMATS.add(createByClass(Ublox.class));
+		FORMATS.add(createByClass(Viewranger.class));
 		FORMATS.add(TILESTORE);
 	}
 
